--- a/astrality/config/astrality.yaml
+++ b/astrality/config/astrality.yaml
@@ -2,6 +2,7 @@ settings/astrality:
     # If hot_reload is enabled, modifications to this file automatically runs:
     #       1) exit actions from the old configuration
     #       2) startup actions from the new configuration
+    # Requires restart if enabled
     hot_reload: false
 
     # You can delay astrality on startup. The delay is given in seconds.
