Rename context import from_file -> from_path
This makes folder path imports non-breakable in the future.

--- a/astrality/config/astrality.yaml
+++ b/astrality/config/astrality.yaml
@@ -52,7 +52,7 @@ module/solar_wallpaper:
         # e.g. `night`, into the global context section named `colors`,
         # from the file: wallpaper_themes/default/colors.yaml.
         import_context:
-            - from_file: modules/solar_wallpaper/solar_colors.yaml
+            - from_path: modules/solar_wallpaper/solar_colors.yaml
               from_section: '{period}'
               to_section: colors
 
