--- a/astrality/config/modules/alacritty/alacritty.yaml.template
+++ b/astrality/config/modules/alacritty/alacritty.yaml.template
@@ -104,9 +104,9 @@ render_timer: false
 
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: true
+custom_cursor_colors: false
 
-# Colors (Tomorrow Night Bright)
+# Colors
 colors:
   # Default colors
   primary:
@@ -115,8 +115,8 @@ colors:
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x{{ colors.foreground.2 }}'
-    cursor: '0x{{ colors.background.2 }}'
+    text: '0x{{ colors.foreground.4 }}'
+    cursor: '0x{{ colors.background.4 }}'
 
   # Normal colors
   normal:
