--- a/astrality/config/modules/colors/color_schemes.yaml
+++ b/astrality/config/modules/colors/color_schemes.yaml
@@ -196,12 +196,14 @@ context/solarized_light:
         green:   '859900'
         yellow:  'b58900'
         blue:    '268bd2'
+        aqua:    '268bd2'
         magenta: 'd33682'
         cyan:    '2aa198'
         white:   'eee8d5'
         orange:  'cb4b16'
         violet:  '6c71c4'
-        white: '000000'
+        white:   '000000'
+        gray:    'a89984'
 
     bright:
         black:   '002b36'
@@ -209,9 +211,11 @@ context/solarized_light:
         green:   '586e75'
         yellow:  '657b83'
         blue:    '839496'
+        aqua:    '839496'
         magenta: '6c71c4'
         cyan:    '93a1a1'
         white:   'fdf6e3'
         orange:  'cb4b16'
         violet:  '6c71c4'
-        white: '000000'
+        white:   '000000'
+        gray:    'a89984'
